<resources>
    <string name="app_name">Final Orange Project</string>
    <string name="splash_img1">splash_img1</string>
    <string name="image2">image2</string>


    <string name="splash_t1">splash_t1</string>
    <string name="splash_t2">splash_t2</string>
    <string name="t3">Welcome</string>
    <string name="t4">to Our Store</string>
    <string name="t5">Ger Your groceries in as fast as one hour</string>
    <string name="t6">Get Started</string>
    <string name="textview">TextView</string>
    <string name="img1">this is img1</string>
    <string name="img2">this is img2</string>
    <string name="tv1">Dhaka, Banassre</string>
    <string name="edt1">Search Store</string>
    <string name="tv2">Exclusive Offer</string>
    <string name="shop">shop</string>
    <string name="explore">Explore</string>
    <string name="cart">cart</string>
    <string name="favourite">favourite</string>
    <string name="account">account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imageDec1">img1</string>
    <string name="imageDec2">img2</string>
    <string name="add">add</string>
    <string name="substract">substract</string>
    <string name="_4_99">$4.99</string>
    <string name="product_detail">Product Detail</string>
    <string name="this_is_img">this is img3</string>
    <string name="long_text">Apples are nutritious. Apples may be good for weight loss.apples may be good for your heart. As part of a healtful and varied diet.</string>
    <string name="nutritions">Nutritions</string>
    <string name="img7">img7</string>
    <string name="review">Review</string>
    <string name="img66">img66</string>
    <string name="img55">img55</string>
    <string name="img44">img44</string>
    <string name="img33">img33</string>
    <string name="img22">img22</string>
    <string name="img11">img11</string>
    <string name="add_to_basket">Add To Basket</string>
    <string name="im1">im1</string>
    <string name="im2">im2</string>
    <string name="t">t</string>
    <string name="this_is_text">this is text</string>
    <string name="text1">text1</string>
    <string name="text2">text2</string>
    <string name="imagee1">imagee1</string>
    <string name="textt1">text1</string>
    <string name="textt2">textt1</string>
    <string name="_1">1</string>
    <string name="this_img1">this img1</string>
    <string name="this_img2">this img2</string>
    <string name="this_img22">this img22</string>
    <string name="money">$4.99</string>
    <string name="iamgge1">iamgge1</string>
    <string name="money2">$1.50</string>
    <string name="imagge2">imagge2</string>
    <string name="imf1">imf1</string>
    <string name="this_is_text1">this is text1</string>
    <string name="this_is_text2">this is text2</string>
    <string name="search_store">search store</string>
    <string name="mycart">myCart</string>
    <string name="add_all_to_cart">Add All To Cart</string>
    <string name="search">search</string>
    <string name="todo">TODO</string>
    <string name="pen_image">pen image</string>
    <string name="text">Text</string>
    <string name="imshuvo97_gmail_com">Imshuvo97@gmail.com</string>
    <string name="group_image">group_image</string>
    <string name="your_order_has_been_accepted">Your Order has been</string>
    <string name="your_items_has_been_placcd_and_is_on_it_s_way_to_being_processed">Your items has been placcd and is on it’s way to being processed</string>
    <string name="track_order">Track Order</string>
    <string name="track_order1">Track Order</string>
    <string name="back_to_home">Back to home</string>
    <string name="accepted">accepted</string>
    <string name="imgclose2">imgclose2</string>
    <string name="place_order">Place Order</string>
    <string name="by_placing_an_order_you_agree_to_our">By placing an order you agree to our</string>
    <string name="enter_your_email">enter your email</string>
    <string name="enter_your_password">enter your password</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="singup">Singup</string>
    <string name="this_is_carrot">this is carrot</string>
    <string name="sign_up2">Sign Up</string>
    <string name="enter_your_credentials_to_continue">Enter your credentials to continue</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password2">Password</string>
    <string name="by_continuing_you_agree_to_our">By continuing you agree to our</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="sign_up3">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="singup4">Singup</string>
    <string name="todo3">TODO</string>
    <string name="notifecations">Notifecations</string>
    <string name="my_details">My Details</string>
    <string name="promo_cord">Promo Cord</string>
    <string name="orders">Orders</string>
    <string name="log_out">Log Out</string>
    <string name="categoryimage">categoryImage</string>
    <string name="categoryname">categoryName</string>
    <string name="textview88">TextView</string>
    <string name="todo787">TODO787</string>
    <string name="todo77">TODO77</string>
    <string name="category2">category2</string>
    <string name="categorytext2">categorytext2</string>
    <string name="categorytext3">categorytext3</string>
    <string name="category4">category4</string>
    <string name="todo12">TODO12</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="todo24">TODO24</string>
    <string name="todo14">TODO14</string>
    <string name="todo8">TODO8</string>
    <string name="todo10">TODO10</string>
    <string name="todo55">TODO55</string>
    <string name="todo655">TODO655</string>
    <string name="todo9567765">TODO9567765</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="todo88">TODO88</string>
    <string name="todo122">TODO122</string>
    <string name="todo444">TODO444</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="todo454">TODO454</string>
    <string name="todo787777">TODO787</string>
    <string name="todo99">TODO99</string>
    <string name="todo77666">TODO77666</string>
    <string name="flowerimg">flowerimg</string>
    <string name="cardimg">cardimg</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="arrimg">arrImg</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="myca">myca</string>
    <string name="_880">+880</string>
    <string name="enter_your_mobile">enter your mobile</string>
    <string name="todo1165161">TODO1165161</string>
    <string name="todo8767">TODO8767</string>
    <string name="enter_your_4_digit_code">Enter your 4-digit code</string>
    <string name="enter_your_code">enter your code</string>
    <string name="todo85246">TODO85246</string>
    <string name="select_your_location">Select Your Location</string>
    <string name="swithch_on_your_location_to_stay_in_tune_with_n_what_s_happening_in_your_area">Swithch on your location to stay in tune with \n what’s happening in your area</string>
    <string name="banasree">Banasree</string>
    <string name="types_of_your_area">Types of your area</string>
    <string name="get_started">Get Started</string>
    <string name="your_area">Your Area</string>
    <string name="your_zone">Your Zone</string>
    <string name="todo757557">TODO757557</string>
    <string name="todo666">TODO666</string>
    <string name="naturel_red_apple">Naturel Red Apple</string>
    <string name="_1kg_price">1kg, Price</string>
    <string name="textt11">1</string>
    <string name="profile_image">profile_image</string>
    <string name="banner_image">banner_image</string>


</resources>