<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/shop"
        android:icon="@drawable/shop"
        android:title="@string/shop" />
    <item
        android:id="@+id/explore"
        android:icon="@drawable/search"
        android:title="@string/explore"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cart"
        android:icon="@drawable/cart"
        android:title="@string/cart"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favourite"
        android:icon="@drawable/favourite"
        android:title="@string/favourite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/account"
        android:icon="@drawable/account"
        android:title="@string/account"
        app:showAsAction="ifRoom" />
</menu>