<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".screens.activites.DetailsScreen">


    <LinearLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:contentDescription="@string/imageDec1"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
          />


        <ImageView
            android:id="@+id/details_image"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo666"
            tools:srcCompat="@tools:sample/avatars" />
        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/image2"
            android:src="@drawable/ic_baseline_present_to_all_24"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/shop_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/naturel_red_apple"
                android:textSize="24sp"
                android:layout_weight="1"
                />

            <ImageView
                android:id="@+id/details_favourite"
                android:layout_width="50dp"
                android:layout_height="32dp"

                android:layout_gravity="center"
                android:contentDescription="@string/todo3"
                android:src="@drawable/ic_baseline_favo_border_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="378dp"
            android:layout_height="379dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/_1kg_price"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shop_name" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/add"
                    android:src="@drawable/ic_baseline_remove_24" />



                    <TextView
                        android:id="@+id/num1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"

                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:text="@string/textt11"
                        android:textColor="#000000"
                        android:textSize="16sp" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/substract"
                    android:src="@drawable/ic_baseline_add_24" />


            </LinearLayout>

            <TextView
                android:id="@+id/details_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/_4_99"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/product_detail"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:contentDescription="@string/this_is_img"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

            </LinearLayout>

            <TextView
                android:id="@+id/details_description"
                android:layout_width="343dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/long_text"
                app:layout_constraintEnd_toStartOf="@+id/img5"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/t4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/nutritions"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_description" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/img7"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/t44"
                    app:layout_constraintTop_toBottomOf="@+id/details_description" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/t8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="@string/review"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/t44" />

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="right"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/t8"
                    app:layout_constraintTop_toBottomOf="@+id/img7">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/img11"
                        android:src="@drawable/ic_baseline_star_rate_24" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/img22"
                        android:src="@drawable/ic_baseline_star_rate_24" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/img33"
                        android:src="@drawable/ic_baseline_star_rate_24" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/img44"
                        android:src="@drawable/ic_baseline_star_rate_24" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/img55"
                        android:src="@drawable/ic_baseline_star_rate_24" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/img66"
                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>



    </LinearLayout>

    <Button
        android:id="@+id/b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#53b175"
        android:minHeight="48dp"
        android:text="@string/add_to_basket"
      />

</LinearLayout>
